--- a/pom.xml
+++ b/pom.xml
@@ -42,7 +42,7 @@
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-war-plugin</artifactId>
+                <artifactId>maven-jar-plugin</artifactId>
                 <version>3.3.2</version>
             </plugin>
         </plugins>
